fixed overflow scroll

--- a/public/styles.css
+++ b/public/styles.css
@@ -187,6 +187,10 @@ header a {
   }
 
   .sidebar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     background-color: #E64A19;
     padding: 30px;
     position: sticky;
@@ -197,15 +201,12 @@ header a {
   }
 
   .sidebar > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     text-align: left;
-    
     width: fit-content;
     margin: auto;
-    height: 100%;
-    /* overflow-y: scroll; */
+    max-height: 100%;
+    min-height: fit-content;
+    overflow-y: scroll;
   }
 }
 
